@@ -25,6 +25,7 @@ import games.strategy.engine.delegate.*;
 import games.strategy.engine.message.IRemote;
 import games.strategy.triplea.Constants;
 import games.strategy.triplea.attatchments.TerritoryAttatchment;
+import games.strategy.triplea.attatchments.PlayerAttatchment;
 
 import java.io.Serializable;
 import java.util.Iterator;
@@ -116,6 +117,7 @@ public class EndRoundDelegate implements ISaveableDelegate
 	public int getProduction(PlayerID id)
 	{
 		int sum = 0;
+
 		Iterator territories = m_data.getMap().iterator();
 		while(territories.hasNext())
 		{
@@ -126,6 +128,7 @@ public class EndRoundDelegate implements ISaveableDelegate
 				sum += ta.getProduction();
 			}
 		}
+                
 		return sum;
 	}
 
